[package]
name = "bevy-ui-gradients"
keywords = ["bevy", "gamedev", ""]
description = "Bevy UI gradients plugin"
categories = ["game-development", "gui", "graphics"]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
readme = "../README.md"

[features]
serialize = []

[dependencies]
bevy = "0.15"
bytemuck = "1.7"
