[package]
name = "bevy-ui-gradients"
keywords = ["bevy", "gamedev", "ui", "gradients", "rendering"]
description = "Bevy UI gradients plugin"
categories = ["game-development", "gui", "rendering"]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/ickshonpe/bevy-ui-gradients"


[dependencies]
bevy = { version = "0.15", features = ["bevy_asset", "bevy_sprite", "bevy_ui"] }
bytemuck = "1.7"
